# stationaryorbit.core:/test/CMakeLists.txt
# Copyright 2020-2021 zawa-ch.
# GPLv3 (or later) license
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# any later version.
#
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.
# If not, see <http://www.gnu.org/licenses/>.
#

function(do_test_nofail target index)
    add_test(NAME ${target}.${index} COMMAND ${target} ${index})
    set_tests_properties(${target}.${index}
    PROPERTIES
        PASS_REGULAR_EXPRESSION "\.\.\.OK"
        FAIL_REGULAR_EXPRESSION "NG"
        SKIP_RETURN_CODE 255
        TIMEOUT 1
)
endfunction(do_test_nofail)
function(do_test_willfail target index)
    add_test(NAME ${target}.${index} COMMAND ${target} ${index})
    set_tests_properties(${target}.${index}
    PROPERTIES
        PASS_REGULAR_EXPRESSION "\.\.\.OK"
        FAIL_REGULAR_EXPRESSION "NG"
        WILL_FAIL true
        SKIP_RETURN_CODE 255
        TIMEOUT 1
)
endfunction(do_test_willfail)
function(do_test_pattern target index pattern)
    add_test(NAME ${target}.${index} COMMAND ${target} ${index})
    set_tests_properties(${target}.${index}
    PROPERTIES
        PASS_REGULAR_EXPRESSION ${pattern}
        SKIP_RETURN_CODE 255
        TIMEOUT 1
)
endfunction(do_test_pattern)

add_executable(stationaryorbit.core.test.algorithms test.algorithms.cpp)
target_link_libraries(stationaryorbit.core.test.algorithms stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.algorithms 1 "value . 77")
do_test_pattern(stationaryorbit.core.test.algorithms 2 "mod . 0")
do_test_pattern(stationaryorbit.core.test.algorithms 3 "value . 2")
do_test_pattern(stationaryorbit.core.test.algorithms 4 "mod . 2")
do_test_willfail(stationaryorbit.core.test.algorithms 5)
do_test_willfail(stationaryorbit.core.test.algorithms 6)
do_test_nofail(stationaryorbit.core.test.algorithms 7)
do_test_nofail(stationaryorbit.core.test.algorithms 8)
do_test_nofail(stationaryorbit.core.test.algorithms 9)
do_test_nofail(stationaryorbit.core.test.algorithms 10)
do_test_nofail(stationaryorbit.core.test.algorithms 11)
do_test_nofail(stationaryorbit.core.test.algorithms 12)
do_test_nofail(stationaryorbit.core.test.algorithms 13)
do_test_nofail(stationaryorbit.core.test.algorithms 14)
do_test_nofail(stationaryorbit.core.test.algorithms 15)
do_test_nofail(stationaryorbit.core.test.algorithms 16)
do_test_nofail(stationaryorbit.core.test.algorithms 17)
do_test_nofail(stationaryorbit.core.test.algorithms 18)
do_test_nofail(stationaryorbit.core.test.algorithms 19)
do_test_nofail(stationaryorbit.core.test.algorithms 20)
do_test_nofail(stationaryorbit.core.test.algorithms 21)
do_test_nofail(stationaryorbit.core.test.algorithms 22)
do_test_nofail(stationaryorbit.core.test.algorithms 23)
do_test_nofail(stationaryorbit.core.test.algorithms 24)
do_test_nofail(stationaryorbit.core.test.algorithms 25)
do_test_nofail(stationaryorbit.core.test.algorithms 26)
do_test_nofail(stationaryorbit.core.test.algorithms 27)
do_test_nofail(stationaryorbit.core.test.algorithms 28)
do_test_nofail(stationaryorbit.core.test.algorithms 29)
do_test_nofail(stationaryorbit.core.test.algorithms 30)
do_test_nofail(stationaryorbit.core.test.algorithms 31)
do_test_nofail(stationaryorbit.core.test.algorithms 32)
do_test_pattern(stationaryorbit.core.test.algorithms 33 "halfangle_sin.0. . 0.707106781186548")
do_test_pattern(stationaryorbit.core.test.algorithms 34 "halfangle_sin.0\.5. . 0\.5")
do_test_pattern(stationaryorbit.core.test.algorithms 35 "halfangle_sin.1. . 0")
do_test_pattern(stationaryorbit.core.test.algorithms 36 "halfangle_cos.0. . 0.707106781186548")
do_test_pattern(stationaryorbit.core.test.algorithms 37 "halfangle_cos.0\.5. . 0\.866025403784439")
do_test_pattern(stationaryorbit.core.test.algorithms 38 "halfangle_cos.1. . 1")
do_test_pattern(stationaryorbit.core.test.algorithms 39 "halfangle_tan.1, 0. . 1")
do_test_pattern(stationaryorbit.core.test.algorithms 40 "halfangle_tan.0\.86602540378443864676372317075294, 0\.5. . 0\.577350269189626")
do_test_pattern(stationaryorbit.core.test.algorithms 41 "atan.1. . 0\.785398163397448")
do_test_pattern(stationaryorbit.core.test.algorithms 42 "atan.0\.70710678118654752440084436210485. . 0\.615479708670387")
do_test_pattern(stationaryorbit.core.test.algorithms 43 "asin.0. . 0")
do_test_pattern(stationaryorbit.core.test.algorithms 44 "asin.0\.29289321881345247559915563789515. . 0\.29725136132120[67]")
do_test_pattern(stationaryorbit.core.test.algorithms 45 "asin.0\.5. . 0\.52359877559829[89]")
do_test_pattern(stationaryorbit.core.test.algorithms 46 "asin.0\.70710678118654752440084436210485. . 0\.785398163397448")
do_test_pattern(stationaryorbit.core.test.algorithms 47 "sin.0. . 0")
do_test_pattern(stationaryorbit.core.test.algorithms 48 "sin.0\.78539816339744830961566084581988. . 0.70710678118654[78]")
do_test_pattern(stationaryorbit.core.test.algorithms 49 "sin.1\.5707963267948966192313216916398. . 1")
do_test_pattern(stationaryorbit.core.test.algorithms 50 "cos.0. . 1")
do_test_pattern(stationaryorbit.core.test.algorithms 51 "cos.0\.78539816339744830961566084581988. . 0.70710678118654[78]")

add_executable(stationaryorbit.core.test.arithmeticoperation test.arithmeticoperation.cpp)
target_link_libraries(stationaryorbit.core.test.arithmeticoperation stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 1 "result . 156")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 2 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 3 "result . 25934")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 4 "status . overflow_positive")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 5 "result . 16982")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 6 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 7 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 8 "status . overflow_positive")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 9 "result . -2160")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 10 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 11 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 12 "status . overflow_negative")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 13 "result . -3780")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 14 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 15 "result . 5580")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 16 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 17 "result . 130")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 18 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 19 "result . 117506")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 20 "status . overflow_negative")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 21 "result . 2578")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 22 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 23 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 24 "status . overflow_negative")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 25 "result . 19330")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 26 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 27 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 28 "status . overflow_positive")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 29 "result . 2716")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 30 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 31 "result . -18266")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 32 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 33 "result . 1859")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 34 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 35 "result . 1011195376")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 36 "status . overflow")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 37 "result . 70435560")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 38 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 39 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 40 "status . overflow")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 41 "result . -92245825")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 42 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 43 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 44 "status . overflow")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 45 "result . 1727936")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 46 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 47 "result . -75627589")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 48 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 49 "result . 11")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 50 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 51 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 52 "status . divide_by_zero")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 53 "result . 1")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 54 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 55 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 56 "status . divide_by_zero")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 57 "result . 0")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 58 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 59 "result . -?[0-9]+")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 60 "status . divide_by_zero")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 61 "result . 6")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 62 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 63 "result . -1")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 64 "status . no_error")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 65 "add_saturate\(.*\) . 156")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 66 "add_saturate\(.*\) . 4294967295")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 67 "add_saturate\(.*\) . 16982")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 68 "add_saturate\(.*\) . 2147483647")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 69 "add_saturate\(.*\) . -2160")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 70 "add_saturate\(.*\) . -2147483648")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 71 "add_saturate\(.*\) . -3780")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 72 "add_saturate\(.*\) . 5580")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 73 "subtract_saturate\(.*\) . 130")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 74 "subtract_saturate\(.*\) . 0")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 75 "subtract_saturate\(.*\) . 2578")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 76 "subtract_saturate\(.*\) . -2147483648")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 77 "subtract_saturate\(.*\) . 19330")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 78 "subtract_saturate\(.*\) . 2147483647")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 79 "subtract_saturate\(.*\) . 2716")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 80 "subtract_saturate\(.*\) . -18266")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 81 "multiply_saturate\(.*\) . 1859")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 82 "multiply_saturate\(.*\) . 4294967295")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 83 "multiply_saturate\(.*\) . 70435560")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 84 "multiply_saturate\(.*\) . 2147483647")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 85 "multiply_saturate\(.*\) . -92245825")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 86 "multiply_saturate\(.*\) . 2147483647")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 87 "multiply_saturate\(.*\) . 1727936")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 88 "multiply_saturate\(.*\) . -75627589")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 89 "divide_saturate\(.*\) . 11")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 90)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 91 "divide_saturate\(.*\) . 1")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 92)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 93 "divide_saturate\(.*\) . 0")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 94)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 95 "divide_saturate\(.*\) . 6")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 96 "divide_saturate\(.*\) . -1")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 97 "add_checked\(.*\) . 156")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 98)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 99 "add_checked\(.*\) . 16982")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 100)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 101 "add_checked\(.*\) . -2160")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 102)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 103 "add_checked\(.*\) . -3780")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 104 "add_checked\(.*\) . 5580")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 105 "subtract_checked\(.*\) . 130")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 106)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 107 "subtract_checked\(.*\) . 2578")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 108)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 109 "subtract_checked\(.*\) . 19330")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 110)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 111 "subtract_checked\(.*\) . 2716")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 112 "subtract_checked\(.*\) . -18266")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 113 "multiply_checked\(.*\) . 1859")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 114)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 115 "multiply_checked\(.*\) . 70435560")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 116)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 117 "multiply_checked\(.*\) . -92245825")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 118)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 119 "multiply_checked\(.*\) . 1727936")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 120 "multiply_checked\(.*\) . -75627589")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 121 "divide_checked\(.*\) . 11")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 122)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 123 "divide_checked\(.*\) . 1")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 124)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 125 "divide_checked\(.*\) . 0")
do_test_willfail(stationaryorbit.core.test.arithmeticoperation 126)
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 127 "divide_checked\(.*\) . 6")
do_test_pattern(stationaryorbit.core.test.arithmeticoperation 128 "divide_checked\(.*\) . -1")
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 129)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 130)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 131)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 132)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 133)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 134)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 135)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 136)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 137)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 138)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 139)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 140)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 141)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 142)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 143)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 144)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 145)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 146)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 147)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 148)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 149)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 150)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 151)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 152)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 153)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 154)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 155)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 156)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 157)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 158)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 159)
do_test_nofail(stationaryorbit.core.test.arithmeticoperation 160)

add_executable(stationaryorbit.core.test.basicmath test.basicmath.cpp)
target_link_libraries(stationaryorbit.core.test.basicmath stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.basicmath 1 "pi.float. . 3\.14159[23]")
do_test_pattern(stationaryorbit.core.test.basicmath 2 "pi.double. . 3\.14159265358979")
do_test_pattern(stationaryorbit.core.test.basicmath 3 "sin.0. . 0")
do_test_pattern(stationaryorbit.core.test.basicmath 4 "sin.0\.78539816339744830961566084581988. . 0.70710678118654[78]")
do_test_pattern(stationaryorbit.core.test.basicmath 5 "sin.1\.5707963267948966192313216916398. . 1")

add_executable(stationaryorbit.core.test.bitmask test.bitmask.cpp)
target_link_libraries(stationaryorbit.core.test.bitmask stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.bitmask 1 "mask . [Ff]0")
do_test_pattern(stationaryorbit.core.test.bitmask 2 "mask . [Aa][Aa]")
do_test_pattern(stationaryorbit.core.test.bitmask 3 "begin_index . 4")
do_test_pattern(stationaryorbit.core.test.bitmask 4 "begin_index . 1")
do_test_pattern(stationaryorbit.core.test.bitmask 5 "end_index . 8")
do_test_pattern(stationaryorbit.core.test.bitmask 6 "end_index . 8")
do_test_pattern(stationaryorbit.core.test.bitmask 7 "length . 4")
do_test_pattern(stationaryorbit.core.test.bitmask 8 "length . 7")
do_test_pattern(stationaryorbit.core.test.bitmask 9 "get_from.0x38. . 30")
do_test_pattern(stationaryorbit.core.test.bitmask 10 "get_aligned_from.0x38. . 3")
do_test_pattern(stationaryorbit.core.test.bitmask 11 "get_from.0x250. . 50")
do_test_pattern(stationaryorbit.core.test.bitmask 12 "get_aligned_from.0x250. . 1")
do_test_pattern(stationaryorbit.core.test.bitmask 13 "set_to.0x00, 0xAA. . [Aa]0")
do_test_pattern(stationaryorbit.core.test.bitmask 14 "set_aligned_to.0xAA, 3. . 3[Aa]")
do_test_pattern(stationaryorbit.core.test.bitmask 15 ".~mask. . 55555555")
do_test_pattern(stationaryorbit.core.test.bitmask 16 "get_aligned_from.0x38. . 8")
do_test_pattern(stationaryorbit.core.test.bitmask 17 "get_from.0xFF00FF00. . [Ff][Ff]00[Ff][Ff]00")
do_test_pattern(stationaryorbit.core.test.bitmask 18 "get_from.0xFF00FF00. . 0")
do_test_pattern(stationaryorbit.core.test.bitmask 19 "get_from.0xFF00FF00. . [Ff][Ff]00[Ff][Ff]00")
do_test_pattern(stationaryorbit.core.test.bitmask 20 "get_from.0xFF00FF00. . 0")
do_test_pattern(stationaryorbit.core.test.bitmask 21 "mask . 00000000000000000000000011110000")
do_test_pattern(stationaryorbit.core.test.bitmask 22 "mask . 00000000000000000000000010101010")
do_test_pattern(stationaryorbit.core.test.bitmask 23 "begin_index . 4")
do_test_pattern(stationaryorbit.core.test.bitmask 24 "begin_index . 1")
do_test_pattern(stationaryorbit.core.test.bitmask 25 "end_index . 8")
do_test_pattern(stationaryorbit.core.test.bitmask 26 "end_index . 8")
do_test_pattern(stationaryorbit.core.test.bitmask 27 "length . 4")
do_test_pattern(stationaryorbit.core.test.bitmask 28 "length . 7")
do_test_pattern(stationaryorbit.core.test.bitmask 29 "get_from.0x38. . 00000000000000000000000000110000")
do_test_pattern(stationaryorbit.core.test.bitmask 30 "get_aligned_from.0x38. . 00000000000000000000000000000011")
do_test_pattern(stationaryorbit.core.test.bitmask 31 "get_from.0x250. . 00000000000000000000000001010000")
do_test_pattern(stationaryorbit.core.test.bitmask 32 "get_aligned_from.0x250. . 00000000000000000000000000000001")
do_test_pattern(stationaryorbit.core.test.bitmask 33 "set_to.0x00, 0xAA. . 00000000000000000000000010100000")
do_test_pattern(stationaryorbit.core.test.bitmask 34 "set_aligned_to.0xAA, 3. . 00000000000000000000000000111010")
do_test_pattern(stationaryorbit.core.test.bitmask 35 ".~mask. . 01010101010101010101010101010101")
do_test_pattern(stationaryorbit.core.test.bitmask 36 "get_aligned_from.0x38. . 00000000000000000000000000001000")
do_test_pattern(stationaryorbit.core.test.bitmask 37 "get_from.0xFF00FF00. . 11111111000000001111111100000000")
do_test_pattern(stationaryorbit.core.test.bitmask 38 "get_from.0xFF00FF00. . 00000000000000000000000000000000")
do_test_pattern(stationaryorbit.core.test.bitmask 39 "get_from.0xFF00FF00. . 11111111000000001111111100000000")
do_test_pattern(stationaryorbit.core.test.bitmask 40 "get_from.0xFF00FF00. . 00000000000000000000000000000000")

add_executable(stationaryorbit.core.test.constarray test.constarray.cpp)
target_link_libraries(stationaryorbit.core.test.constarray stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.constarray 1 ". 1 1 2 3 5 8 13")

add_executable(stationaryorbit.core.test.constprogression test.constprogression.cpp)
target_link_libraries(stationaryorbit.core.test.constprogression stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.constprogression 1 ". 1 2 3 4 5 6 7 8 9 10")
do_test_pattern(stationaryorbit.core.test.constprogression 2 ". 10")

add_executable(stationaryorbit.core.test.endian test.endian.cpp)
target_link_libraries(stationaryorbit.core.test.endian stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.endian 1 "LE->BE . DEADBEEF")
do_test_pattern(stationaryorbit.core.test.endian 2 "BE->LE . EFBEADDE")
do_test_nofail(stationaryorbit.core.test.endian 3)
do_test_nofail(stationaryorbit.core.test.endian 4)
do_test_pattern(stationaryorbit.core.test.endian 5 "data.. . EFBEADDE")
do_test_pattern(stationaryorbit.core.test.endian 6 "data.. . DEADBEEF")

add_executable(stationaryorbit.core.test.delegate test.delegate.cpp)
target_link_libraries(stationaryorbit.core.test.delegate stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.delegate 1)

add_executable(stationaryorbit.core.test.disperse test.disperse.cpp)
target_link_libraries(stationaryorbit.core.test.disperse stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.disperse 1 ". 12345678")
do_test_pattern(stationaryorbit.core.test.disperse 2 ". 1431655765")

add_executable(stationaryorbit.core.test.fixedpoint test.fixedpoint.cpp)
target_link_libraries(stationaryorbit.core.test.fixedpoint stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.fixedpoint 1)
do_test_nofail(stationaryorbit.core.test.fixedpoint 2)
do_test_nofail(stationaryorbit.core.test.fixedpoint 3)
do_test_nofail(stationaryorbit.core.test.fixedpoint 4)
do_test_nofail(stationaryorbit.core.test.fixedpoint 5)
do_test_nofail(stationaryorbit.core.test.fixedpoint 6)
do_test_nofail(stationaryorbit.core.test.fixedpoint 7)
do_test_nofail(stationaryorbit.core.test.fixedpoint 8)
do_test_nofail(stationaryorbit.core.test.fixedpoint 9)
do_test_nofail(stationaryorbit.core.test.fixedpoint 10)
do_test_nofail(stationaryorbit.core.test.fixedpoint 11)
do_test_nofail(stationaryorbit.core.test.fixedpoint 12)
do_test_nofail(stationaryorbit.core.test.fixedpoint 13)
do_test_nofail(stationaryorbit.core.test.fixedpoint 14)
do_test_nofail(stationaryorbit.core.test.fixedpoint 15)
do_test_pattern(stationaryorbit.core.test.fixedpoint 16 "255\.996")
do_test_pattern(stationaryorbit.core.test.fixedpoint 17 "0")
do_test_pattern(stationaryorbit.core.test.fixedpoint 18 "0\.00390625")

add_executable(stationaryorbit.core.test.halfangleformula test.halfangleformula.cpp)
target_link_libraries(stationaryorbit.core.test.halfangleformula stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.halfangleformula 1 "sin .
1
0\.707106[0-9]*
0\.382683[0-9]*
0\.195090[0-9]*
0\.0980171[0-9]*
0\.0490676[0-9]*
0\.0245412[0-9]*
0\.0122715[0-9]*
0\.00613588[0-9]*")
do_test_pattern(stationaryorbit.core.test.halfangleformula 2 "cos .
0
0\.707106[0-9]*
0\.923879[0-9]*
0\.980785[0-9]*
0\.995184[0-9]*
0\.998795[0-9]*
0\.999698[0-9]*
0\.999924[0-9]*
0\.999981[0-9]*")

add_executable(stationaryorbit.core.test.integer test.integer.cpp)
target_link_libraries(stationaryorbit.core.test.integer stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.integer 1)
do_test_nofail(stationaryorbit.core.test.integer 2)
do_test_nofail(stationaryorbit.core.test.integer 3)
do_test_nofail(stationaryorbit.core.test.integer 4)
do_test_nofail(stationaryorbit.core.test.integer 5)
do_test_nofail(stationaryorbit.core.test.integer 6)
do_test_nofail(stationaryorbit.core.test.integer 7)
do_test_nofail(stationaryorbit.core.test.integer 8)
do_test_nofail(stationaryorbit.core.test.integer 9)
do_test_nofail(stationaryorbit.core.test.integer 10)
do_test_nofail(stationaryorbit.core.test.integer 11)
do_test_nofail(stationaryorbit.core.test.integer 12)
do_test_nofail(stationaryorbit.core.test.integer 13)
do_test_nofail(stationaryorbit.core.test.integer 14)
do_test_nofail(stationaryorbit.core.test.integer 15)
do_test_nofail(stationaryorbit.core.test.integer 16)
do_test_nofail(stationaryorbit.core.test.integer 17)
do_test_nofail(stationaryorbit.core.test.integer 18)
do_test_nofail(stationaryorbit.core.test.integer 19)
do_test_nofail(stationaryorbit.core.test.integer 20)
do_test_nofail(stationaryorbit.core.test.integer 21)
do_test_nofail(stationaryorbit.core.test.integer 22)
do_test_nofail(stationaryorbit.core.test.integer 23)

add_executable(stationaryorbit.core.test.iterator test.iterator.cpp)
target_link_libraries(stationaryorbit.core.test.iterator stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.iterator 1)
do_test_nofail(stationaryorbit.core.test.iterator 2)
do_test_nofail(stationaryorbit.core.test.iterator 3)
do_test_nofail(stationaryorbit.core.test.iterator 4)
do_test_nofail(stationaryorbit.core.test.iterator 5)
do_test_nofail(stationaryorbit.core.test.iterator 6)
do_test_pattern(stationaryorbit.core.test.iterator 7 "1 2 3 4 5")
do_test_pattern(stationaryorbit.core.test.iterator 8 "5 4 3 2 1")
do_test_pattern(stationaryorbit.core.test.iterator 9 "0 1 2 3 4")

add_executable(stationaryorbit.core.test.logic test.logic.cpp)
target_link_libraries(stationaryorbit.core.test.logic stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.logic 1 "true")
do_test_pattern(stationaryorbit.core.test.logic 2 "false")
do_test_pattern(stationaryorbit.core.test.logic 3 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 4 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 5 "true")
do_test_pattern(stationaryorbit.core.test.logic 6 "true")
do_test_pattern(stationaryorbit.core.test.logic 7 "true")
do_test_pattern(stationaryorbit.core.test.logic 8 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 9 "true")
do_test_pattern(stationaryorbit.core.test.logic 10 "false")
do_test_pattern(stationaryorbit.core.test.logic 11 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 12 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 13 "true")
do_test_pattern(stationaryorbit.core.test.logic 14 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 15 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 16 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 17 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 18 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 19 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 20 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 21 "true")
do_test_pattern(stationaryorbit.core.test.logic 22 "false")
do_test_pattern(stationaryorbit.core.test.logic 23 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 24 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 25 "false")
do_test_pattern(stationaryorbit.core.test.logic 26 "false")
do_test_pattern(stationaryorbit.core.test.logic 27 "false")
do_test_pattern(stationaryorbit.core.test.logic 28 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 29 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 30 "false")
do_test_pattern(stationaryorbit.core.test.logic 31 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 32 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 33 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 34 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 35 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 36 "undefined")
do_test_pattern(stationaryorbit.core.test.logic 37 "false")
do_test_pattern(stationaryorbit.core.test.logic 38 "true")
do_test_pattern(stationaryorbit.core.test.logic 39 "indefinited")
do_test_pattern(stationaryorbit.core.test.logic 40 "undefined")
do_test_nofail(stationaryorbit.core.test.logic 41)
do_test_nofail(stationaryorbit.core.test.logic 42)
do_test_nofail(stationaryorbit.core.test.logic 43)
do_test_nofail(stationaryorbit.core.test.logic 44)

add_executable(stationaryorbit.core.test.machinprogression test.machinprogression.cpp)
target_link_libraries(stationaryorbit.core.test.machinprogression stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.machinprogression 1 "float.pi. . 3\.14159[23]")
do_test_pattern(stationaryorbit.core.test.machinprogression 2 "double.pi. . 3\.14159265358979")

add_executable(stationaryorbit.core.test.md5 test.md5.cpp)
target_link_libraries(stationaryorbit.core.test.md5 stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.md5 1 "MD5Table.1. . d76aa478")
do_test_pattern(stationaryorbit.core.test.md5 2 "MD5Table.2. . e8c7b756")
do_test_pattern(stationaryorbit.core.test.md5 3 "MD5Table.3. . 242070db")
do_test_pattern(stationaryorbit.core.test.md5 4 "MD5Table.4. . c1bdceee")
do_test_pattern(stationaryorbit.core.test.md5 5 "MD5Table.5. . f57c0faf")
do_test_pattern(stationaryorbit.core.test.md5 6 "MD5Table.6. . 4787c62a")
do_test_pattern(stationaryorbit.core.test.md5 7 "MD5Table.7. . a8304613")
do_test_pattern(stationaryorbit.core.test.md5 8 "MD5Table.8. . fd469501")
do_test_pattern(stationaryorbit.core.test.md5 9 "MD5Table.9. . 698098d8")
do_test_pattern(stationaryorbit.core.test.md5 10 "MD5Table.10. . 8b44f7af")
do_test_pattern(stationaryorbit.core.test.md5 11 "MD5Table.11. . ffff5bb1")
do_test_pattern(stationaryorbit.core.test.md5 12 "MD5Table.12. . 895cd7be")
do_test_pattern(stationaryorbit.core.test.md5 13 "MD5Table.13. . 6b901122")
do_test_pattern(stationaryorbit.core.test.md5 14 "MD5Table.14. . fd987193")
do_test_pattern(stationaryorbit.core.test.md5 15 "MD5Table.15. . a679438e")
do_test_pattern(stationaryorbit.core.test.md5 16 "MD5Table.16. . 49b40821")
do_test_pattern(stationaryorbit.core.test.md5 17 "MD5Table.17. . f61e2562")
do_test_pattern(stationaryorbit.core.test.md5 18 "MD5Table.18. . c040b340")
do_test_pattern(stationaryorbit.core.test.md5 19 "MD5Table.19. . 265e5a51")
do_test_pattern(stationaryorbit.core.test.md5 20 "MD5Table.20. . e9b6c7aa")
do_test_pattern(stationaryorbit.core.test.md5 21 "MD5Table.21. . d62f105d")
do_test_pattern(stationaryorbit.core.test.md5 22 "MD5Table.22. . 2441453")
do_test_pattern(stationaryorbit.core.test.md5 23 "MD5Table.23. . d8a1e681")
do_test_pattern(stationaryorbit.core.test.md5 24 "MD5Table.24. . e7d3fbc8")
do_test_pattern(stationaryorbit.core.test.md5 25 "MD5Table.25. . 21e1cde6")
do_test_pattern(stationaryorbit.core.test.md5 26 "MD5Table.26. . c33707d6")
do_test_pattern(stationaryorbit.core.test.md5 27 "MD5Table.27. . f4d50d87")
do_test_pattern(stationaryorbit.core.test.md5 28 "MD5Table.28. . 455a14ed")
do_test_pattern(stationaryorbit.core.test.md5 29 "MD5Table.29. . a9e3e905")
do_test_pattern(stationaryorbit.core.test.md5 30 "MD5Table.30. . fcefa3f8")
do_test_pattern(stationaryorbit.core.test.md5 31 "MD5Table.31. . 676f02d9")
do_test_pattern(stationaryorbit.core.test.md5 32 "MD5Table.32. . 8d2a4c8a")
do_test_pattern(stationaryorbit.core.test.md5 33 "MD5Table.33. . fffa3942")
do_test_pattern(stationaryorbit.core.test.md5 34 "MD5Table.34. . 8771f681")
do_test_pattern(stationaryorbit.core.test.md5 35 "MD5Table.35. . 6d9d6122")
do_test_pattern(stationaryorbit.core.test.md5 36 "MD5Table.36. . fde5380c")
do_test_pattern(stationaryorbit.core.test.md5 37 "MD5Table.37. . a4beea44")
do_test_pattern(stationaryorbit.core.test.md5 38 "MD5Table.38. . 4bdecfa9")
do_test_pattern(stationaryorbit.core.test.md5 39 "MD5Table.39. . f6bb4b60")
do_test_pattern(stationaryorbit.core.test.md5 40 "MD5Table.40. . bebfbc70")
do_test_pattern(stationaryorbit.core.test.md5 41 "MD5Table.41. . 289b7ec6")
do_test_pattern(stationaryorbit.core.test.md5 42 "MD5Table.42. . eaa127fa")
do_test_pattern(stationaryorbit.core.test.md5 43 "MD5Table.43. . d4ef3085")
do_test_pattern(stationaryorbit.core.test.md5 44 "MD5Table.44. . 4881d05")
do_test_pattern(stationaryorbit.core.test.md5 45 "MD5Table.45. . d9d4d039")
do_test_pattern(stationaryorbit.core.test.md5 46 "MD5Table.46. . e6db99e5")
do_test_pattern(stationaryorbit.core.test.md5 47 "MD5Table.47. . 1fa27cf8")
do_test_pattern(stationaryorbit.core.test.md5 48 "MD5Table.48. . c4ac5665")
do_test_pattern(stationaryorbit.core.test.md5 49 "MD5Table.49. . f4292244")
do_test_pattern(stationaryorbit.core.test.md5 50 "MD5Table.50. . 432aff97")
do_test_pattern(stationaryorbit.core.test.md5 51 "MD5Table.51. . ab9423a7")
do_test_pattern(stationaryorbit.core.test.md5 52 "MD5Table.52. . fc93a039")
do_test_pattern(stationaryorbit.core.test.md5 53 "MD5Table.53. . 655b59c3")
do_test_pattern(stationaryorbit.core.test.md5 54 "MD5Table.54. . 8f0ccc92")
do_test_pattern(stationaryorbit.core.test.md5 55 "MD5Table.55. . ffeff47d")
do_test_pattern(stationaryorbit.core.test.md5 56 "MD5Table.56. . 85845dd1")
do_test_pattern(stationaryorbit.core.test.md5 57 "MD5Table.57. . 6fa87e4f")
do_test_pattern(stationaryorbit.core.test.md5 58 "MD5Table.58. . fe2ce6e0")
do_test_pattern(stationaryorbit.core.test.md5 59 "MD5Table.59. . a3014314")
do_test_pattern(stationaryorbit.core.test.md5 60 "MD5Table.60. . 4e0811a1")
do_test_pattern(stationaryorbit.core.test.md5 61 "MD5Table.61. . f7537e82")
do_test_pattern(stationaryorbit.core.test.md5 62 "MD5Table.62. . bd3af235")
do_test_pattern(stationaryorbit.core.test.md5 63 "MD5Table.63. . 2ad7d2bb")
do_test_pattern(stationaryorbit.core.test.md5 64 "MD5Table.64. . eb86d391")
do_test_pattern(stationaryorbit.core.test.md5 65 "MD5.test_pattern_0. . D41D8CD98F00B204E9800998ECF8427E")
do_test_pattern(stationaryorbit.core.test.md5 66 "MD5.test_pattern_1. . 0CC175B9C0F1B6A831C399E269772661")
do_test_pattern(stationaryorbit.core.test.md5 67 "MD5.test_pattern_2. . 900150983CD24FB0D6963F7D28E17F72")
do_test_pattern(stationaryorbit.core.test.md5 68 "MD5.test_pattern_3. . F96B697D7CB7938D525A2F31AAF161D0")
do_test_pattern(stationaryorbit.core.test.md5 69 "MD5.test_pattern_4. . C3FCD3D76192E4007DFB496CCA67E13B")
do_test_pattern(stationaryorbit.core.test.md5 70 "MD5.test_pattern_5. . D174AB98D277D9F5A5611C2C9F419D9F")
do_test_pattern(stationaryorbit.core.test.md5 71 "MD5.test_pattern_6. . 57EDF4A22BE3C955AC49DA2E2107B67A")
do_test_pattern(stationaryorbit.core.test.md5 72 "MD5.test_pattern_7. . E4D909C290D0FB1CA068FFADDF22CBD0")
do_test_pattern(stationaryorbit.core.test.md5 73 "MD5.test_pattern_8. . 119B13E82EAA45291FE89B97FDA96BA7")
do_test_pattern(stationaryorbit.core.test.md5 74 "MD5.test_pattern_9. . D89F0C2E36CA332482C9C599D417F8DC")
do_test_pattern(stationaryorbit.core.test.md5 75 "MD5.test_pattern_10. . C8C4CD8D771D0A6F7DC7D08DE43D0E18")

add_executable(stationaryorbit.core.test.objectholder test.objectholder.cpp)
target_link_libraries(stationaryorbit.core.test.objectholder stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.objectholder 1)
do_test_nofail(stationaryorbit.core.test.objectholder 2)
do_test_pattern(stationaryorbit.core.test.objectholder 3 " . 15")
do_test_pattern(stationaryorbit.core.test.objectholder 4 " . 28")
do_test_nofail(stationaryorbit.core.test.objectholder 5)
do_test_nofail(stationaryorbit.core.test.objectholder 6)
do_test_pattern(stationaryorbit.core.test.objectholder 7 " . 15")
do_test_pattern(stationaryorbit.core.test.objectholder 8 " . 15")
do_test_nofail(stationaryorbit.core.test.objectholder 9)
do_test_nofail(stationaryorbit.core.test.objectholder 10)
do_test_pattern(stationaryorbit.core.test.objectholder 11 " . 15")
do_test_nofail(stationaryorbit.core.test.objectholder 12)
do_test_nofail(stationaryorbit.core.test.objectholder 13)
do_test_pattern(stationaryorbit.core.test.objectholder 14 " . 15")
do_test_pattern(stationaryorbit.core.test.objectholder 15 " . 15")
do_test_nofail(stationaryorbit.core.test.objectholder 16)
do_test_nofail(stationaryorbit.core.test.objectholder 17)
do_test_willfail(stationaryorbit.core.test.objectholder 18)
do_test_nofail(stationaryorbit.core.test.objectholder 19)
do_test_nofail(stationaryorbit.core.test.objectholder 20)
do_test_pattern(stationaryorbit.core.test.objectholder 21 " . 15")
do_test_pattern(stationaryorbit.core.test.objectholder 22 " . 28")
do_test_nofail(stationaryorbit.core.test.objectholder 23)
do_test_nofail(stationaryorbit.core.test.objectholder 24)
do_test_pattern(stationaryorbit.core.test.objectholder 25 " . 15")
do_test_nofail(stationaryorbit.core.test.objectholder 26)
do_test_nofail(stationaryorbit.core.test.objectholder 27)
do_test_willfail(stationaryorbit.core.test.objectholder 28)
do_test_nofail(stationaryorbit.core.test.objectholder 29)
do_test_willfail(stationaryorbit.core.test.objectholder 30)
do_test_nofail(stationaryorbit.core.test.objectholder 31)
do_test_willfail(stationaryorbit.core.test.objectholder 32)
do_test_nofail(stationaryorbit.core.test.objectholder 33)
do_test_willfail(stationaryorbit.core.test.objectholder 34)
do_test_nofail(stationaryorbit.core.test.objectholder 35)
do_test_pattern(stationaryorbit.core.test.objectholder 36 " . 15")
do_test_nofail(stationaryorbit.core.test.objectholder 37)
do_test_willfail(stationaryorbit.core.test.objectholder 38)
do_test_nofail(stationaryorbit.core.test.objectholder 39)
do_test_willfail(stationaryorbit.core.test.objectholder 40)
do_test_nofail(stationaryorbit.core.test.objectholder 41)
do_test_willfail(stationaryorbit.core.test.objectholder 42)
do_test_nofail(stationaryorbit.core.test.objectholder 43)
do_test_willfail(stationaryorbit.core.test.objectholder 44)

add_executable(stationaryorbit.core.test.point2d test.point2d.cpp)
target_link_libraries(stationaryorbit.core.test.point2d stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.point2d 1 "(5, 12)")
do_test_pattern(stationaryorbit.core.test.point2d 2 "(1, -4)")
do_test_nofail(stationaryorbit.core.test.point2d 3)
do_test_pattern(stationaryorbit.core.test.point2d 4 "(-2.8, 3.8)")
do_test_pattern(stationaryorbit.core.test.point2d 5 "(3.4, -0.2)")
do_test_pattern(stationaryorbit.core.test.point2d 6 "(0, 2)")
do_test_pattern(stationaryorbit.core.test.point2d 7 "(0, 1)")
do_test_pattern(stationaryorbit.core.test.point2d 8 "(1, 2)")
do_test_pattern(stationaryorbit.core.test.point2d 9 "(0.3, 0.8)")

add_executable(stationaryorbit.core.test.property test.property.cpp)
target_link_libraries(stationaryorbit.core.test.property stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.property 1 " . 10")
do_test_pattern(stationaryorbit.core.test.property 2 " . 3")

add_executable(stationaryorbit.core.test.proportion test.proportion.cpp)
target_link_libraries(stationaryorbit.core.test.proportion stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.proportion 1)
do_test_nofail(stationaryorbit.core.test.proportion 2)
do_test_nofail(stationaryorbit.core.test.proportion 3)
do_test_nofail(stationaryorbit.core.test.proportion 4)
do_test_nofail(stationaryorbit.core.test.proportion 5)
do_test_nofail(stationaryorbit.core.test.proportion 6)
do_test_nofail(stationaryorbit.core.test.proportion 7)
do_test_nofail(stationaryorbit.core.test.proportion 8)
do_test_nofail(stationaryorbit.core.test.proportion 9)
do_test_nofail(stationaryorbit.core.test.proportion 10)
do_test_nofail(stationaryorbit.core.test.proportion 11)
do_test_nofail(stationaryorbit.core.test.proportion 12)
do_test_nofail(stationaryorbit.core.test.proportion 13)
do_test_nofail(stationaryorbit.core.test.proportion 14)
do_test_nofail(stationaryorbit.core.test.proportion 15)
do_test_nofail(stationaryorbit.core.test.proportion 16)
do_test_nofail(stationaryorbit.core.test.proportion 17)
do_test_nofail(stationaryorbit.core.test.proportion 18)
do_test_nofail(stationaryorbit.core.test.proportion 19)
do_test_nofail(stationaryorbit.core.test.proportion 20)
do_test_nofail(stationaryorbit.core.test.proportion 21)
do_test_nofail(stationaryorbit.core.test.proportion 22)
do_test_nofail(stationaryorbit.core.test.proportion 23)
do_test_nofail(stationaryorbit.core.test.proportion 24)
do_test_nofail(stationaryorbit.core.test.proportion 25)
do_test_pattern(stationaryorbit.core.test.proportion 26 "0.501960784313725")
do_test_pattern(stationaryorbit.core.test.proportion 27 "0.250980392156862")
do_test_nofail(stationaryorbit.core.test.proportion 28)
do_test_nofail(stationaryorbit.core.test.proportion 29)
do_test_nofail(stationaryorbit.core.test.proportion 30)
do_test_nofail(stationaryorbit.core.test.proportion 31)
do_test_nofail(stationaryorbit.core.test.proportion 32)
do_test_nofail(stationaryorbit.core.test.proportion 33)
do_test_pattern(stationaryorbit.core.test.proportion 34 "0.25")
do_test_pattern(stationaryorbit.core.test.proportion 35 "4629771061636907072")
do_test_nofail(stationaryorbit.core.test.proportion 36)
do_test_nofail(stationaryorbit.core.test.proportion 37)

add_executable(stationaryorbit.core.test.range test.range.cpp)
target_link_libraries(stationaryorbit.core.test.range stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.range 1)
do_test_nofail(stationaryorbit.core.test.range 2)
do_test_nofail(stationaryorbit.core.test.range 3)
do_test_nofail(stationaryorbit.core.test.range 4)
do_test_nofail(stationaryorbit.core.test.range 5)
do_test_pattern(stationaryorbit.core.test.range 6 "0 1 2 3 4 5 6 7 8 9")
do_test_pattern(stationaryorbit.core.test.range 7 "11 10 9 8 7 6 5")
do_test_nofail(stationaryorbit.core.test.range 8)

add_executable(stationaryorbit.core.test.rectangle2d test.rectangle2d.cpp)
target_link_libraries(stationaryorbit.core.test.rectangle2d stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.rectangle2d 1 "r1\.left . 0")
do_test_pattern(stationaryorbit.core.test.rectangle2d 2 "r1\.right . 3")
do_test_pattern(stationaryorbit.core.test.rectangle2d 3 "r1\.top . 4")
do_test_pattern(stationaryorbit.core.test.rectangle2d 4 "r1\.bottom . 0")
do_test_nofail(stationaryorbit.core.test.rectangle2d 5)
do_test_pattern(stationaryorbit.core.test.rectangle2d 6 "r2\.left . -3")
do_test_pattern(stationaryorbit.core.test.rectangle2d 7 "r2\.right . 0")
do_test_pattern(stationaryorbit.core.test.rectangle2d 8 "r2\.top . 10")
do_test_pattern(stationaryorbit.core.test.rectangle2d 9 "r2\.bottom . 6")

add_executable(stationaryorbit.core.test.ringbuffer test.ringbuffer.cpp)
target_link_libraries(stationaryorbit.core.test.ringbuffer stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.ringbuffer 1 " . 1 2 4 7")
do_test_pattern(stationaryorbit.core.test.ringbuffer 2 " . 1 2 4 7")
do_test_pattern(stationaryorbit.core.test.ringbuffer 3 " . 7 4 2 1")
do_test_pattern(stationaryorbit.core.test.ringbuffer 4 " . 7 4 2 1")
do_test_willfail(stationaryorbit.core.test.ringbuffer 5)
do_test_willfail(stationaryorbit.core.test.ringbuffer 6)

add_executable(stationaryorbit.core.test.rotation test.rotation.cpp)
target_link_libraries(stationaryorbit.core.test.rotation stationaryorbit.core)
do_test_pattern(stationaryorbit.core.test.rotation 1 "radian . 0\.52359[89]")
do_test_pattern(stationaryorbit.core.test.rotation 2 "degree . 90")
do_test_pattern(stationaryorbit.core.test.rotation 3 " . 120")
do_test_pattern(stationaryorbit.core.test.rotation 4 " . 300")
do_test_pattern(stationaryorbit.core.test.rotation 5 " . 180")
do_test_pattern(stationaryorbit.core.test.rotation 6 " . 15")
do_test_nofail(stationaryorbit.core.test.rotation 7)
do_test_nofail(stationaryorbit.core.test.rotation 8)
do_test_nofail(stationaryorbit.core.test.rotation 9)
do_test_nofail(stationaryorbit.core.test.rotation 10)
do_test_nofail(stationaryorbit.core.test.rotation 11)
do_test_nofail(stationaryorbit.core.test.rotation 12)
do_test_pattern(stationaryorbit.core.test.rotation 13 "sin . 0")
do_test_pattern(stationaryorbit.core.test.rotation 14 "sin . 0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 15 "sin . 0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 16 "sin . 0\.866025")
do_test_pattern(stationaryorbit.core.test.rotation 17 "sin . 1")
do_test_pattern(stationaryorbit.core.test.rotation 18 "sin . 0\.866025")
do_test_pattern(stationaryorbit.core.test.rotation 19 "sin . 0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 20 "sin . 0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 21 "sin . -?0")
do_test_pattern(stationaryorbit.core.test.rotation 22 "sin . -0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 23 "sin . -0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 24 "sin . -0\.866025")
do_test_pattern(stationaryorbit.core.test.rotation 25 "sin . -1")
do_test_pattern(stationaryorbit.core.test.rotation 26 "sin . -0\.866025")
do_test_pattern(stationaryorbit.core.test.rotation 27 "sin . -0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 28 "sin . -0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 29 "cos . 1")
do_test_pattern(stationaryorbit.core.test.rotation 30 "cos . 0\.866025")
do_test_pattern(stationaryorbit.core.test.rotation 31 "cos . 0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 32 "cos . 0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 33 "cos . -?0")
do_test_pattern(stationaryorbit.core.test.rotation 34 "cos . -0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 35 "cos . -0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 36 "cos . -0\.866025")
do_test_pattern(stationaryorbit.core.test.rotation 37 "cos . -1")
do_test_pattern(stationaryorbit.core.test.rotation 38 "cos . -0\.866025")
do_test_pattern(stationaryorbit.core.test.rotation 39 "cos . -0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 40 "cos . -0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 41 "cos . -?0")
do_test_pattern(stationaryorbit.core.test.rotation 42 "cos . 0\.5")
do_test_pattern(stationaryorbit.core.test.rotation 43 "cos . 0\.70710[67]")
do_test_pattern(stationaryorbit.core.test.rotation 44 "cos . 0\.866025")

add_executable(stationaryorbit.core.test.zerovalue test.zerovalue.cpp)
target_link_libraries(stationaryorbit.core.test.zerovalue stationaryorbit.core)
do_test_nofail(stationaryorbit.core.test.zerovalue 1)
do_test_nofail(stationaryorbit.core.test.zerovalue 2)
do_test_nofail(stationaryorbit.core.test.zerovalue 3)
do_test_nofail(stationaryorbit.core.test.zerovalue 4)
do_test_nofail(stationaryorbit.core.test.zerovalue 5)
do_test_nofail(stationaryorbit.core.test.zerovalue 6)
do_test_nofail(stationaryorbit.core.test.zerovalue 7)
do_test_nofail(stationaryorbit.core.test.zerovalue 8)
do_test_pattern(stationaryorbit.core.test.zerovalue 9 "5")
